--- a/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
+++ b/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
@@ -20,6 +20,6 @@ parameters:
   hf_model_name:
     values: [
       "facebook/bart-base",
-      "google/pegasus-x-base",
+      "google/pegasus-gigaword",
       "google/mt5-base"
     ]
