--- a/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
+++ b/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
@@ -19,6 +19,7 @@ parameters:
     values: ["adamw", "adam"]
   hf_model_name:
     values: [
+      "google-t5/t5-11b",
       "google/flan-t5-xl",
       "facebook/bart-large-xsum"
     ]
