--- a/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
+++ b/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
@@ -21,5 +21,6 @@ parameters:
     values: [
       "facebook/bart-base",
       "google/pegasus-gigaword",
-      "google/mt5-base"
+      "google/mt5-base",
+      "facebook/bart-large-xsum"
     ]
