--- a/configs/server2/sweep_t5_base_rtx4090_1_gpu1.yaml
+++ b/configs/server2/sweep_t5_base_rtx4090_1_gpu1.yaml
@@ -21,5 +21,6 @@ parameters:
     values: [
       "t5-base",
       "google/flan-t5-base",
-      "google/t5-v1_1-base"
+      "google/t5-v1_1-base",
+      "facebook/bart-large"
     ]
