--- a/configs/server1/sweep_large_models_ada6000_gpu1.yaml
+++ b/configs/server1/sweep_large_models_ada6000_gpu1.yaml
@@ -22,5 +22,6 @@ parameters:
       "google/pegasus-large",
       "google/pegasus-x-large",
       "google-t5/t5-3b",
+      "google/t5-3b-ssm-nq",
       "google/t5_xxl_true_nli_mixture-bf16"
     ]
