--- a/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
+++ b/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
@@ -20,6 +20,6 @@ parameters:
   hf_model_name:
     values: [
       "google-t5/t5-11b",
-      "google/flan-t5-xl",
-      "google/t5-11b-ssm-nq"
+      "google/t5-11b-ssm-nq",
+      "google/t5_xxl_true_nli_mixture-bf16"
     ]
