--- a/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
+++ b/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
@@ -21,5 +21,5 @@ parameters:
     values: [
       "google-t5/t5-11b",
       "google/t5-11b-ssm-nq",
-      "google/t5_xxl_true_nli_mixture-bf16"
+      "google/t5_xxl_true_nli_mixture-bf16"  # xxl = 11B parameters for T5 models
     ]
