--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-# requirements.txt
-
 torch>=2.0.0
 transformers>=4.30.0
 wandb>=0.15.0
 sacrebleu>=2.3.1
 rouge>=1.0.1
 elasticsearch>=8.0.0
+sentencepiece>=0.1.99
+psutil>=5.8.0
+bitsandbytes>=0.41.0
+peft>=0.5.0
+accelerate>=0.21.0
