--- a/sweep.yaml
+++ b/sweep.yaml
@@ -4,9 +4,9 @@ parameters:
   batch_size:
     value: 16
   epochs:
-    value: 2
+    value: 3
   hf_model_name:
-    value: google/t5-11b-ssm-nq
+    values: ["google-t5/t5-3b", "google-t5/t5-small"]
   learning_rate:
     value: 0.0001
   optimizer:
