--- a/configs/server1/sweep_t5_11b_ada6000_4bit.yaml
+++ b/configs/server1/sweep_t5_11b_ada6000_4bit.yaml
@@ -21,6 +21,6 @@ parameters:
   optimizer:
     values: ["adamw"]
   hf_model_name:
-    values: ["iarroyof/t5-11b-ssm-nq-sharded"]
+    values: ["iarroyof/t5-11b-ssm-nq-sharded", "google/t5_xxl_true_nli_mixture"]
   quantization:
     values: ["4bit"]
