--- a/sweep.yaml
+++ b/sweep.yaml
@@ -2,11 +2,11 @@ program: main.py
 method: grid
 parameters:
   batch_size:
-    value: 16
+    value: 256
   epochs:
-    value: 3
+    value: 2
   hf_model_name:
-    values: ["google-t5/t5-3b", "google-t5/t5-small"]
+    values: ["google-t5/t5-small"]
   learning_rate:
     value: 0.0001
   optimizer:
