--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -3,4 +3,4 @@ ElasticSearch:
   url: "http://192.168.241.210:9200"
   index: "triplets"
   es_page_size: 10000
-  max_docs2load: 100000
+  max_docs2load: 1000000
