--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -2,5 +2,5 @@
 ElasticSearch:
   url: "http://192.168.241.210:9200"
   index: "triplets"
-  es_page_size: 10000
-  max_docs2load: 1000000
+  es_page_size: 5000
+  max_docs2load: 10000
