--- a/configs/server1/sweep_t5_11b_ada6000_4bit.yaml
+++ b/configs/server1/sweep_t5_11b_ada6000_4bit.yaml
@@ -9,7 +9,7 @@ parameters:
   learning_rate:
     values: [1e-4, 5e-5, 1e-5]
   batch_size:
-    values: [1, 2]
+    values: [4, 8, 16, 32, 64]
   gradient_accumulation_steps:
     values: [4, 8, 16, 32]
   epochs:
