--- a/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
+++ b/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
@@ -21,5 +21,7 @@ parameters:
     values: [
       "google-t5/t5-3b",
       "google/t5-3b-ssm-nq",
-      "google/flan-t5-xl"  # 2.85B parameters 
+      "google/flan-t5-xl",  # 2.85B parameters 
+      "google/t5-efficient-xl-nl28",
+      "google/t5-efficient-xl-nl2"
     ]
