--- a/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
+++ b/configs/server1/sweep_xl_models_ada6000_gpu0.yaml
@@ -1,6 +1,6 @@
 program: main.py
 name: sweep_xl_models_ada6000_gpu0
-method: random
+method: grid
 metric:
   goal: minimize
   name: validation_loss
