--- a/configs/server1/sweep_t5_11b_84bit.yaml
+++ b/configs/server1/sweep_t5_11b_84bit.yaml
@@ -10,8 +10,6 @@ parameters:
     values: [1e-4, 5e-5, 1e-5]
   batch_size:
     values: [4, 8, 16, 32, 64]
-  gradient_accumulation_steps:
-    values: [4, 8, 16, 32]
   epochs:
     values: [2, 4]
   target_seq_len:
@@ -20,7 +18,13 @@ parameters:
     values: [8, 16, 32, 64, 128]
   optimizer:
     values: ["adamw"]
-  hf_model_name:
-    values: ["iarroyof/t5-11b-ssm-nq-sharded", "google/t5_xxl_true_nli_mixture", "google/t5_11b_trueteacher_and_anli", "utahnlp/squad_t5-11b_seed-1", "utahnlp/snli_t5-11b_seed-1"]
   quantization:
     values: ["4bit", "8bit"]
+  hf_model_name:
+    values: [
+      "iarroyof/t5-11b-ssm-nq-sharded",
+      "google/t5_xxl_true_nli_mixture",
+      "google/t5_11b_trueteacher_and_anli",
+      "utahnlp/squad_t5-11b_seed-1",
+      "utahnlp/snli_t5-11b_seed-1"
+    ]
