--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -2,5 +2,6 @@
 ElasticSearch:
   url: "http://192.168.241.210:9200"
   index: "triplets"
-  es_page_size: 500
+  es_page_size: 5000
   max_docs2load: 1000
+  article_ids_file: "lung_cancer_es_ids.txt"
