--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -4,4 +4,4 @@ ElasticSearch:
   index: "triplets"
   es_page_size: 5000
   max_docs2load: 1000
-  article_ids_file: "lung_cancer_es_ids.txt"
+  article_ids_file: "data/lung_cancer_es_ids.txt"
