--- a/sweep.yaml
+++ b/sweep.yaml
@@ -6,7 +6,7 @@ parameters:
   epochs:
     value: 2
   hf_model_name:
-    values: ["nvidia/nemo-megatron-t5-3B"]
+    values: ["google-t5/t5-small"]
   learning_rate:
     value: 0.0001
   optimizer:
