--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -3,5 +3,6 @@ ElasticSearch:
   url: "http://192.168.241.210:9200"
   index: "triplets"
   es_page_size: 5000
-  max_docs2load: 1000
+  n_sentences: 10000
   article_ids_file: "data/lung_cancer_es_ids.txt"
+  n_articles: 10000
