--- a/configs/es_config.yaml
+++ b/configs/es_config.yaml
@@ -2,8 +2,8 @@
 ElasticSearch:
   url: "http://192.168.241.210:9200"
   index: "triplets"
-  es_page_size: 500 #1000
-  n_sentences: 10000 #1000000
+  es_page_size: 1000
+  n_sentences: 1000000
   article_ids_file: "data/lung_cancer_es_ids.txt"
-  n_articles: 5000 #12150
+  n_articles: 12150
   cache_dir: "data/cache_art_ids"
