--- a/sweep.yaml
+++ b/sweep.yaml
@@ -12,6 +12,6 @@ parameters:
   optimizer:
     value: adamw
   source_seq_len:
-    value: 8
+    values: [8, 16]
   target_seq_len:
-    value: 16
+    values: [16, 32]
