--- a/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
+++ b/configs/server2/sweep_base_models_rtx4090_1_gpu0.yaml
@@ -1,9 +1,9 @@
 program: main.py
 name: sweep_base_models_rtx4090_1_gpu0
-method: random
+method: grid
 metric:
   goal: minimize
-  name: validation_loss
+  name: final_test_loss
 parameters:
   learning_rate:
     values: [0.001, 0.0001, 0.00001, 0.000005]
