--- a/configs/Dockerfile
+++ b/configs/Dockerfile
@@ -1,5 +1,5 @@
 # Start from NVIDIA CUDA base image
-FROM nvidia/cuda:12.2.2-base-ubuntu22.04
+FROM nvidia/cuda:12.3.2-base-ubuntu22.04
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive \
@@ -51,7 +51,8 @@ RUN source /root/miniconda3/etc/profile.d/conda.sh && \
         pyyaml \
         tiktoken \
         sentencepiece \
-        peft
+        peft \
+        rouge
 
 # Set working directory
 WORKDIR /app
