--- a/configs/server3/sweep_small_t5_rtx4090_2_gpu0.yaml
+++ b/configs/server3/sweep_small_t5_rtx4090_2_gpu0.yaml
@@ -21,5 +21,6 @@ parameters:
     values: [
       "t5-small",
       "google/t5-v1_1-small",
-      "google/flan-t5-small"
+      "google/flan-t5-small",
+      "facebook/bart-large"
     ]
